@@ -1,11 +1,14 @@
 package ai.movegen;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Arrays;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -22,6 +25,7 @@ import ai.representation.piece.Knight;
 import ai.representation.piece.Pawn;
 import ai.representation.piece.Queen;
 import ai.representation.piece.Rook;
+import game.Game;
 
 public class MoveGeneratorTest {
 
@@ -29,66 +33,82 @@ public class MoveGeneratorTest {
 	
 	Board testBoard;
 	
+	Game castleTestGame;
+	
+	Game enPassantGame;
+	
+	Board castleTestBoard;
+	
 	@BeforeEach
 	public void init() {
 		generator = new MoveGenerator();
 		testBoard = new Board();
 		testBoard.initEmptyBoard();
+		castleTestGame = returnGameWithBoardToCastleTestBackRankNonBlock();
+		castleTestBoard = castleTestGame.getState()[0];
+		enPassantGame = new Game();
 	}
 	
 	@Test
 	public void testKnight10() {
 		testBoard.place(new Knight(Color.LIGHT),10);
-		Set<Integer> expected = new HashSet<Integer>(Arrays.asList(25, 27, 4, 20, 0, 16));
-		Set<Integer> actual = new HashSet<Integer>(generator.generateMoves(10, testBoard));
+		Set<Integer> expected = Stream.of(25, 27, 4, 20, 0, 16).collect(Collectors.toSet());
+		Set<Integer> actual = new HashSet<Move>(generator.generateMoves(10, testBoard, new Game()))
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
 	@Test
 	public void testKnight5() {
 		testBoard.place(new Knight(Color.LIGHT),5);
-		List<Integer> expected = Arrays.asList(20, 22, 15, 11);
-		List<Integer> actual = generator.generateMoves(5, testBoard);
+		Set<Integer> expected = Stream.of(20, 22, 15, 11).collect(Collectors.toSet());
+		Set<Integer> actual = generator.generateMoves(5, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
 	@Test
 	public void testKnight20() {
 		testBoard.place(new Knight(Color.LIGHT),20);
-		List<Integer> expected = Arrays.asList(35, 37, 30, 14, 5, 3 ,10, 26);
-		List<Integer> actual = generator.generateMoves(20, testBoard);
+		Set<Integer> expected = Set.of(35, 37, 30, 14, 5, 3 ,10, 26);
+		Set<Integer> actual = generator.generateMoves(20, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
 	@Test
 	public void testKnight31() {
 		testBoard.place(new Knight(Color.LIGHT),31);
-		List<Integer> expected = Arrays.asList(46, 14, 21, 37);
-		List<Integer> actual = generator.generateMoves(31, testBoard);
+		Set<Integer> expected = Set.of(46, 14, 21, 37);
+		Set<Integer> actual = generator.generateMoves(31, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
 	@Test
 	public void testKnight7() {
 		testBoard.place(new Knight(Color.LIGHT),7);
-		List<Integer> expected = Arrays.asList(22, 13);
-		List<Integer> actual = generator.generateMoves(7, testBoard);
+		Set<Integer> expected = Set.of(22, 13);
+		Set<Integer> actual = generator.generateMoves(7, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
 	@Test
 	public void testKnight63() {
 		testBoard.place(new Knight(Color.LIGHT),63);
-		List<Integer> expected = Arrays.asList(46, 53);
-		List<Integer> actual = generator.generateMoves(63, testBoard);
+		Set<Integer> expected = Set.of(46, 53);
+		Set<Integer> actual = generator.generateMoves(63, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
 	@Test
 	public void testBishop63() {
 		testBoard.place(new Bishop(Color.LIGHT),63);
-		List<Integer> expected = Arrays.asList(54, 45, 36, 27, 18, 9, 0);
-		List<Integer> actual = generator.generateMoves(63, testBoard);
+		Set<Integer> expected = Set.of(54, 45, 36, 27, 18, 9, 0);
+		Set<Integer> actual = generator.generateMoves(63, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -96,8 +116,9 @@ public class MoveGeneratorTest {
 	public void testBishop27Friend54() {
 		testBoard.place(new Bishop(Color.LIGHT),27);
 		testBoard.place(new Bishop(Color.LIGHT),54);
-		Set<Integer> expected = new HashSet<Integer>(Arrays.asList(36, 45, 34, 41, 48, 20, 13, 6, 18, 9, 0));
-		Set<Integer> actual = new HashSet<Integer>(generator.generateMoves(27, testBoard));
+		Set<Integer> expected = new HashSet<Integer>(Set.of(36, 45, 34, 41, 48, 20, 13, 6, 18, 9, 0));
+		Set<Integer> actual = generator.generateMoves(27, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -106,8 +127,9 @@ public class MoveGeneratorTest {
 		testBoard.place(new Bishop(Color.LIGHT),27);
 		testBoard.place(new Pawn(Color.LIGHT), 36);
 		testBoard.place(new Pawn(Color.LIGHT), 0);
-		Set<Integer> expected = new HashSet<Integer>(( Arrays.asList(20, 13, 6, 18, 9 ,34, 41 ,48)));
-		Set<Integer> actual = new HashSet<Integer>((generator.generateMoves(27, testBoard)));
+		Set<Integer> expected = new HashSet<Integer>(( Set.of(20, 13, 6, 18, 9 ,34, 41 ,48)));
+		Set<Integer> actual = generator.generateMoves(27, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -115,8 +137,11 @@ public class MoveGeneratorTest {
 	public void testKing27FriendlyPieceOn36() {
 		testBoard.place(new King(Color.LIGHT),27);
 		testBoard.place(new Pawn(Color.LIGHT), 36);
-		Set<Integer> expected = new HashSet<Integer>((Arrays.asList(35, 28, 20, 19, 18, 26, 34)));
-		Set<Integer> actual = new HashSet<Integer>((generator.generateMoves(27, testBoard)));
+		Set<Integer> expected = new HashSet<Integer>((Set.of(35, 28, 20, 19, 18, 26, 34)));
+		Set<Integer> actual = generator.generateMoves(27, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
+		//Function<? super T, ? extends Stream<? extends R>> mapper
+		//BiConsumer<T, U>
 		assertEquals(expected, actual);
 	}
 	
@@ -124,32 +149,36 @@ public class MoveGeneratorTest {
 	public void testBishop63EnemyPieceOn36() {
 		testBoard.place(new Bishop(Color.LIGHT),63);
 		testBoard.place(new Pawn(Color.DARK), 36);
-		List<Integer> expected = Arrays.asList(54, 45, 36);
-		List<Integer> actual = generator.generateMoves(63, testBoard);
+		Set<Integer> expected = Set.of(54, 45, 36);
+		Set<Integer> actual = generator.generateMoves(63, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
 	@Test
 	public void testBishop36() {
 		testBoard.place(new Bishop(Color.DARK),36);
-		List<Integer> expected = Arrays.asList(43,50,57,45,54,63,29,22,15,27,18,9,0);
-		List<Integer> actual = generator.generateMoves(36, testBoard);
+		Set<Integer> expected = Set.of(43,50,57,45,54,63,29,22,15,27,18,9,0);
+		Set<Integer> actual = generator.generateMoves(36, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
 	@Test
 	public void testRook36() {
 		testBoard.place(new Rook(Color.LIGHT),36);
-		List<Integer> expected = Arrays.asList(44,52,60,37,38,39,28,20,12,4,35,34,33,32);
-		List<Integer> actual = generator.generateMoves(36, testBoard);
+		Set<Integer> expected = Set.of(44,52,60,37,38,39,28,20,12,4,35,34,33,32);
+		Set<Integer> actual = generator.generateMoves(36, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
 	@Test
 	public void testRook56() {
 		testBoard.place(new Rook(Color.LIGHT),56);
-		List<Integer> expected = Arrays.asList(57,58,59,60,61,62,63,48,40,32,24,16,8,0);
-		List<Integer> actual = generator.generateMoves(56, testBoard);
+		Set<Integer> expected = Set.of(57,58,59,60,61,62,63,48,40,32,24,16,8,0);
+		Set<Integer> actual = generator.generateMoves(56, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -159,8 +188,9 @@ public class MoveGeneratorTest {
 		testBoard.place(new Rook(Color.DARK),testedPiecePosition);
 		testBoard.place(new Rook(Color.DARK),5);
 		testBoard.place(new Rook(Color.LIGHT),23);
-		List<Integer> expected = Arrays.asList(15,23,6);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(15,23,6);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -168,8 +198,9 @@ public class MoveGeneratorTest {
 	public void testQueen12() {
 		int testedPiecePosition = 12;
 		testBoard.place(new Queen(Color.DARK),testedPiecePosition);
-		List<Integer> expected = Arrays.asList(19,26,33,40,21,30,39,5,3,20,28,36,44,52,60,13,14,15,4,11,10,9,8);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(19,26,33,40,21,30,39,5,3,20,28,36,44,52,60,13,14,15,4,11,10,9,8);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -182,11 +213,9 @@ public class MoveGeneratorTest {
 		testBoard.place(new Rook(Color.LIGHT),36);
 		testBoard.place(new Rook(Color.LIGHT),39);
 		testBoard.place(new Rook(Color.DARK),14);
-		List<Integer> expected = Arrays.asList(19,26,21,30,39,5,3,20,28,36,13,4,11,10,9,8);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
-		System.out.println(testBoard);
-		System.out.println(expected);
-		System.out.println(actual);
+		Set<Integer> expected = Set.of(19,26,21,30,39,5,3,20,28,36,13,4,11,10,9,8);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -194,8 +223,9 @@ public class MoveGeneratorTest {
 	public void testPawn8() {
 		int testedPiecePosition = 8;
 		testBoard.place(new Pawn(Color.LIGHT),testedPiecePosition);
-		List<Integer> expected = Arrays.asList(16,24);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(16,24);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -204,8 +234,9 @@ public class MoveGeneratorTest {
 		int testedPiecePosition = 8;
 		testBoard.place(new Pawn(Color.LIGHT),testedPiecePosition);
 		testBoard.place(new Pawn(Color.DARK),17);
-		List<Integer> expected = Arrays.asList(16,24,17);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(16,24,17);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -216,8 +247,9 @@ public class MoveGeneratorTest {
 		testBoard.place(new Pawn(Color.LIGHT),testedPiecePosition);
 		testBoard.place(new Pawn(Color.DARK),17);
 		testBoard.place(new Pawn(Color.DARK),15);
-		List<Integer> expected = Arrays.asList(16,24,17);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(16,24,17);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -228,8 +260,9 @@ public class MoveGeneratorTest {
 		testBoard.place(new Pawn(Color.DARK),19);
 		testBoard.place(new Pawn(Color.DARK),18);
 		testBoard.place(new Pawn(Color.DARK),20);
-		List<Integer> expected = Arrays.asList(18,20);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(18,20);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -238,8 +271,9 @@ public class MoveGeneratorTest {
 		int testedPiecePosition = 11;
 		testBoard.place(new Pawn(Color.LIGHT),testedPiecePosition);
 		testBoard.place(new Pawn(Color.DARK),19);
-		List<Integer> expected = Arrays.asList();
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of();
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -248,8 +282,9 @@ public class MoveGeneratorTest {
 		int testedPiecePosition = 11;
 		testBoard.place(new Pawn(Color.LIGHT),testedPiecePosition);
 		testBoard.place(new Pawn(Color.LIGHT),19);
-		List<Integer> expected = Arrays.asList();
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of();
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -258,8 +293,9 @@ public class MoveGeneratorTest {
 		int testedPiecePosition = 11;
 		testBoard.place(new Pawn(Color.LIGHT),testedPiecePosition);
 		testBoard.place(new Pawn(Color.LIGHT),27);
-		List<Integer> expected = Arrays.asList(19);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(19);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -268,8 +304,9 @@ public class MoveGeneratorTest {
 		int testedPiecePosition = 11;
 		testBoard.place(new Pawn(Color.LIGHT),testedPiecePosition);
 		testBoard.place(new Pawn(Color.DARK),27);
-		List<Integer> expected = Arrays.asList(19);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(19);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -278,8 +315,9 @@ public class MoveGeneratorTest {
 	public void testDarkPawn50() {
 		int testedPiecePosition = 50;
 		testBoard.place(new Pawn(Color.DARK),testedPiecePosition);
-		List<Integer> expected = Arrays.asList(42,34);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(42,34);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -288,8 +326,9 @@ public class MoveGeneratorTest {
 		int testedPiecePosition = 48;
 		testBoard.place(new Pawn(Color.DARK),testedPiecePosition);
 		testBoard.place(new Knight(Color.LIGHT),41);
-		List<Integer> expected = Arrays.asList(40,32,41);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(40,32,41);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -299,8 +338,9 @@ public class MoveGeneratorTest {
 		testBoard.place(new Pawn(Color.DARK),testedPiecePosition);
 		testBoard.place(new Pawn(Color.LIGHT),42);
 		testBoard.place(new Pawn(Color.LIGHT),44);
-		List<Integer> expected = Arrays.asList(43,35,42,44);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(43,35,42,44);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -310,8 +350,9 @@ public class MoveGeneratorTest {
 		testBoard.place(new Pawn(Color.DARK),testedPiecePosition);
 		testBoard.place(new Pawn(Color.LIGHT),41);
 		testBoard.place(new Pawn(Color.LIGHT),55);
-		List<Integer> expected = Arrays.asList(40,32,41);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(40,32,41);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -321,8 +362,9 @@ public class MoveGeneratorTest {
 		testBoard.place(new Pawn(Color.LIGHT),testedPiecePosition);
 		testBoard.place(new Pawn(Color.DARK),18);
 		testBoard.place(new Pawn(Color.DARK),20);
-		List<Integer> expected = Arrays.asList(19,27,18,20);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(19,27,18,20);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -333,8 +375,9 @@ public class MoveGeneratorTest {
 		testBoard.place(new Pawn(Color.LIGHT),43);
 		testBoard.place(new Pawn(Color.LIGHT),42);
 		testBoard.place(new Pawn(Color.LIGHT),44);
-		List<Integer> expected = Arrays.asList(42,44);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(42,44);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -343,8 +386,9 @@ public class MoveGeneratorTest {
 		int testedPiecePosition = 51;
 		testBoard.place(new Pawn(Color.DARK),testedPiecePosition);
 		testBoard.place(new Pawn(Color.LIGHT),43);
-		List<Integer> expected = Arrays.asList();
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of();
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -353,8 +397,9 @@ public class MoveGeneratorTest {
 		int testedPiecePosition = 51;
 		testBoard.place(new Pawn(Color.DARK),testedPiecePosition);
 		testBoard.place(new Pawn(Color.LIGHT),43);
-		List<Integer> expected = Arrays.asList();
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of();
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -363,8 +408,9 @@ public class MoveGeneratorTest {
 		int testedPiecePosition = 51;
 		testBoard.place(new Pawn(Color.DARK),testedPiecePosition);
 		testBoard.place(new Pawn(Color.DARK),35);
-		List<Integer> expected = Arrays.asList(43);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(43);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -373,8 +419,9 @@ public class MoveGeneratorTest {
 		int testedPiecePosition = 51;
 		testBoard.place(new Pawn(Color.DARK),testedPiecePosition);
 		testBoard.place(new Pawn(Color.LIGHT),35);
-		List<Integer> expected = Arrays.asList(43);
-		List<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard);
+		Set<Integer> expected = Set.of(43);
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -383,7 +430,7 @@ public class MoveGeneratorTest {
 		int kingPosition = 11;
 		testBoard.place(new King(Color.LIGHT),kingPosition);
 		testBoard.place(new Bishop(Color.DARK),25);
-		Boolean actual = generator.IsKingInCheck(Color.LIGHT, testBoard);
+		Boolean actual = generator.isKingInCheck(Color.LIGHT, testBoard, new Game());
 		assertEquals(true, actual);
 	}
 	
@@ -392,7 +439,7 @@ public class MoveGeneratorTest {
 		int kingPosition = 11;
 		testBoard.place(new King(Color.LIGHT),kingPosition);
 		testBoard.place(new Knight(Color.DARK),5);
-		Boolean actual = generator.IsKingInCheck(Color.LIGHT, testBoard);
+		Boolean actual = generator.isKingInCheck(Color.LIGHT, testBoard, new Game());
 		assertEquals(true, actual);
 	}
 	
@@ -401,7 +448,7 @@ public class MoveGeneratorTest {
 		int kingPosition = 11;
 		testBoard.place(new King(Color.LIGHT),kingPosition);
 		testBoard.place(new Bishop(Color.LIGHT),25);
-		Boolean actual = generator.IsKingInCheck(Color.LIGHT, testBoard);
+		Boolean actual = generator.isKingInCheck(Color.LIGHT, testBoard, new Game());
 		assertEquals(false, actual);
 	}
 	
@@ -410,7 +457,7 @@ public class MoveGeneratorTest {
 		testBoard.place(new Bishop(Color.LIGHT), 10);
 		testBoard.place(new Knight(Color.DARK), 27);
 		System.out.println(testBoard);
-		boolean actual = generator.isAttackedBy(10, new Knight(Color.DARK), testBoard);
+		boolean actual = generator.isAttackedBy(10, new Knight(Color.DARK), testBoard, new Game());
 		assertEquals(true, actual);
 	}
 	
@@ -419,7 +466,7 @@ public class MoveGeneratorTest {
 		testBoard.place(new Bishop(Color.LIGHT), 10);
 		testBoard.place(new Rook(Color.DARK), 58);
 		System.out.println(testBoard);
-		boolean actual = generator.isAttackedBy(10, new ColoredPiece(PieceType.ROOK,Color.DARK), testBoard);
+		boolean actual = generator.isAttackedBy(10, new ColoredPiece(PieceType.ROOK,Color.DARK), testBoard, new Game());
 		assertEquals(true, actual);
 	}
 	
@@ -427,7 +474,7 @@ public class MoveGeneratorTest {
 	public void isAttackedByRook() {
 		testBoard.place(new Bishop(Color.LIGHT), 10);
 		testBoard.place(new Rook(Color.DARK), 58);
-		boolean actual = generator.isAttackedBy(10, new Rook(Color.DARK), testBoard);
+		boolean actual = generator.isAttackedBy(10, new Rook(Color.DARK), testBoard, new Game());
 		assertEquals(true, actual);
 	}
 	
@@ -435,7 +482,7 @@ public class MoveGeneratorTest {
 	public void isAttackedByPawn() {
 		testBoard.place(new Bishop(Color.LIGHT), 10);
 		testBoard.place(new Pawn(Color.DARK), 17);
-		boolean actual = generator.isAttackedBy(10, new Pawn(Color.DARK), testBoard);
+		boolean actual = generator.isAttackedBy(10, new Pawn(Color.DARK), testBoard, new Game());
 		assertEquals(true, actual);
 	}
 	
@@ -443,7 +490,7 @@ public class MoveGeneratorTest {
 	public void isAttackedByQueen() {
 		testBoard.place(new Bishop(Color.LIGHT), 10);
 		testBoard.place(new Queen(Color.DARK), 46);
-		boolean actual = generator.isAttackedBy(10, new Queen(Color.DARK), testBoard);
+		boolean actual = generator.isAttackedBy(10, new Queen(Color.DARK), testBoard, new Game());
 		assertEquals(true, actual);
 	}
 	
@@ -452,7 +499,7 @@ public class MoveGeneratorTest {
 		testBoard.place(new Bishop(Color.LIGHT), 10);
 		testBoard.place(new King(Color.DARK), 2);
 		System.out.println(testBoard);
-		boolean actual = generator.isAttackedBy(10, new King(Color.DARK), testBoard);
+		boolean actual = generator.isAttackedBy(10, new King(Color.DARK), testBoard, new Game());
 		assertEquals(true, actual);
 	}
 	
@@ -460,8 +507,9 @@ public class MoveGeneratorTest {
 	public void testKing10() {
 		int testedPiecePosition = 10;
 		testBoard.place(new ColoredPiece(PieceType.KING, Color.LIGHT),testedPiecePosition);
-		Set<Integer> expected = new HashSet<Integer>(Arrays.asList(17, 18, 19, 11, 9, 1, 2, 3));
-		Set<Integer> actual = new HashSet<Integer>(generator.generateMoves(testedPiecePosition, testBoard));
+		Set<Integer> expected = new HashSet<Integer>(Set.of(17, 18, 19, 11, 9, 1, 2, 3));
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -471,8 +519,10 @@ public class MoveGeneratorTest {
 		testBoard.place(new ColoredPiece(PieceType.KING, Color.LIGHT),testedPiecePosition);
 		testBoard.place(new ColoredPiece(PieceType.BISHOP, Color.LIGHT),9);
 		testBoard.place(new ColoredPiece(PieceType.KNIGHT, Color.DARK),19);
-		Set<Integer> expected = new HashSet<Integer>(Arrays.asList(17, 18, 19, 11, 1, 2, 3));
-		Set<Integer> actual = new HashSet<Integer>(generator.generateMoves(testedPiecePosition, testBoard));
+		System.out.println(testBoard);
+		Set<Integer> expected = new HashSet<Integer>(Set.of(17, 18, 19, 11, 1, 3));
+		Set<Integer> actual = generator.generateMoves(testedPiecePosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -488,8 +538,9 @@ public class MoveGeneratorTest {
 	public void testKing10EnemyKing26() {
 		testBoard.place(new ColoredPiece(PieceType.KING, Color.LIGHT), 10);
 		testBoard.place(new ColoredPiece(PieceType.KING, Color.DARK), 26);
-		Set<Integer> expected = new HashSet<Integer>(Arrays.asList(11, 1, 2, 9, 3));
-		Set<Integer> actual = new HashSet<Integer>(generator.generateMoves(10, testBoard));
+		Set<Integer> expected = new HashSet<Integer>(Set.of(11, 1, 2, 9, 3));
+		Set<Integer> actual = generator.generateMoves(10, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		assertEquals(expected, actual);
 	}
 	
@@ -500,7 +551,8 @@ public class MoveGeneratorTest {
 		testBoard.place(new ColoredPiece(PieceType.KNIGHT, Color.DARK), 27);
 		testBoard.place(new ColoredPiece(PieceType.PAWN, Color.DARK), 4);
 		ColoredPiece[][] arr = generator.generateMap(10, testBoard, MoveType.ATTACK);
-		List<Integer> moveList = generator.generateMoves(10, testBoard);
+		Set<Integer> moveList = generator.generateMoves(10, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
 		//AttackDefenseMap admap = new AttackDefenseMap();
 		//admap.setAttackDefenseMap(arr);
 		System.out.println(moveList);
@@ -798,4 +850,73 @@ public class MoveGeneratorTest {
 		assertEquals(new ColoredPiece(PieceType.KNIGHT, Color.DARK), map.getAttackDefenseMap()[10][20]);
 		System.out.println(map.toString());
 	}
+	
+	@Test
+	public void kingCantGenerateMoveIntoChess() {
+		int kingPosition = 14;
+		testBoard.place(new King(Color.LIGHT),kingPosition);
+		testBoard.place(new Rook(Color.DARK),63);
+		Set<Integer> actual = generator.generateMoves(kingPosition, testBoard, new Game())
+				.stream().map(Move::getTo).collect(Collectors.toSet());
+		System.out.println(actual);
+		assertFalse(actual.contains(15) && actual.contains(7) && actual.contains(23));
+	}
+	
+	@Test
+	public void castleTest() {
+		System.out.println(castleTestBoard);
+		int lightKingPosition = 4;
+		int darkKingPosition = 60;
+		Set<Move> lightActual = generator.generateMoves(lightKingPosition, castleTestBoard, castleTestGame)
+				.stream().collect(Collectors.toSet());
+		Set<Move> darkActual = generator.generateMoves(darkKingPosition, castleTestBoard, castleTestGame)
+				.stream().collect(Collectors.toSet());
+		assertTrue(lightActual.size()==4);
+		assertTrue(darkActual.size()==4);
+	}
+	
+	@Test
+	public void enPassantTest() {
+		generator.generateMoves(12, enPassantGame.getLatestBoard(), enPassantGame);
+		enPassantGame.addPositionToGame(Board.transposePositionToNewBoardInstance(enPassantGame.getLatestBoard(), new Move(12,28)));
+		enPassantGame.addPositionToGame(Board.transposePositionToNewBoardInstance(enPassantGame.getLatestBoard(), new Move(48,40)));
+		enPassantGame.addPositionToGame(Board.transposePositionToNewBoardInstance(enPassantGame.getLatestBoard(), new Move(28,36)));
+		Set<Move> moves = generator.generateMoves(51, enPassantGame.getLatestBoard(), enPassantGame)
+				.stream().collect(Collectors.toSet());
+		//enPassantGame.addPositionToGame(Board.transposePositionToNewBoardInstance(enPassantGame.getLatestBoard(), new Move(MoveType.ENPASSANTFLAG,51,35)));
+		//ha each color lep pawn init mezojerol duplat es van mellette enemy pawn duplalepes utan en passant flaggel generalodjon a move
+		//ha van en passant flag akkor lehessen oda takelni
+		Move moveThatTriggersEnPassantFlag = null;
+		for (Move move : moves) {
+			if(move.getMoveType() == MoveType.ENPASSANTFLAG) {
+				moveThatTriggersEnPassantFlag = move;
+			}
+		}
+		enPassantGame.addPositionToGame(Board.transposePositionToNewBoardInstance(enPassantGame.getLatestBoard(), moveThatTriggersEnPassantFlag));
+		Set<Move> moves2 = generator.generateMoves(36, enPassantGame.getLatestBoard(), enPassantGame)
+				.stream().collect(Collectors.toSet());
+		Move enPassantMove = null;
+		for (Move move : moves2) {
+			if(move.getMoveType() == MoveType.ENPASSANT) {
+				enPassantMove = move;
+			}
+		}
+		
+	}
+	
+	private Game returnGameWithBoardToCastleTestBackRankNonBlock() {
+		Game castleTestBackRankNonBlock = new Game();
+		castleTestBackRankNonBlock.getState()[0].grabPieceAndCleanFrom(1);
+		castleTestBackRankNonBlock.getState()[0].grabPieceAndCleanFrom(2);
+		castleTestBackRankNonBlock.getState()[0].grabPieceAndCleanFrom(3);
+		castleTestBackRankNonBlock.getState()[0].grabPieceAndCleanFrom(5);
+		castleTestBackRankNonBlock.getState()[0].grabPieceAndCleanFrom(6);
+		castleTestBackRankNonBlock.getState()[0].grabPieceAndCleanFrom(57);
+		castleTestBackRankNonBlock.getState()[0].grabPieceAndCleanFrom(58);
+		castleTestBackRankNonBlock.getState()[0].grabPieceAndCleanFrom(59);
+		castleTestBackRankNonBlock.getState()[0].grabPieceAndCleanFrom(61);
+		castleTestBackRankNonBlock.getState()[0].grabPieceAndCleanFrom(62);
+		return castleTestBackRankNonBlock;
+	}
+	
 }
